# dynamic-video-reframer

./: .dockerignore  .gitignore  Dockerfile  README.md  lambda_function.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
src/: pipeline.py  pipeline_server.py
src/services/: face_detector_service.py  face_track_processor_service.py  output_formatter_service.py  person_detector_service.py  person_track_processor_service.py  scene_detector_service.py
src/utils/: bounding_box.py  caching.py  config.py  video_downloader.py
